# clf_grasping

./: .directory  .gitignore
clf_grasping_msgs/: CMakeLists.txt  package.xml
clf_grasping_msgs/action/: Pick.action  Place.action  PlanGrasp.action  PlanPick.action  PlanPlace.action
clf_grasping_msgs/msg/: ManipulationResult.msg
clf_grasping_msgs/srv/: CloudToCollision.srv  FindObjectsInROI.srv  FindTable.srv
clf_mtc_server/: CMakeLists.txt  package.xml
clf_mtc_server/config/: tiago.rviz
clf_mtc_server/include/clf_mtc_server/: planning_scene.h  robot_tasks.h  server.h
clf_mtc_server/include/clf_mtc_server/stages/: generate_all_grasp_pose.h  grasp_generator_2_0.h
clf_mtc_server/include/clf_mtc_server/tasks/: common.h  tiago_tasks.h
clf_mtc_server/include/clf_mtc_server/tiago/: tiago_tasks_cupro.h
clf_mtc_server/launch/: tiago.launch
clf_mtc_server/src/: node.cpp  planning_scene.cpp  server.cpp
clf_mtc_server/src/stages/: generate_all_grasp_pose.cpp  grasp_generator_2_0.cpp
clf_mtc_server/src/tasks/: common.cpp  tiago_tasks.cpp  tiago_tasks_cupro.cpp
clf_mtc_server/src/tiago/: tiago_tasks.cpp  tiago_tasks_cupro.cpp
git_hooks/pre-commit/: clang-format
mtc_demo/: CMakeLists.txt  package.xml
mtc_demo/include/mtc_demo/: server.h  task_constructor.h  tiago.h  tiago_tasks.h
mtc_demo/scripts/: clear_scene.py  spawn_scene.py  spawn_scene_cylinder.py  spawn_scene_tea.py
mtc_demo/src/: node.cpp  server.cpp  tiago.cpp  tiago_tasks.cpp
mtc_demo/src/stages/: grasp_generator.hpp  place_generator.hpp
mtc_demo/src/tasks/: clf_mtc_server_tiago.hpp
mtc_demos/: CMakeLists.txt
mtc_demos/src/: tiago.cpp
sq_fitting_adapter/: CMakeLists.txt  package.xml  setup.py
sq_fitting_adapter/config/: default_config.yaml  test_config.yaml
sq_fitting_adapter/launch/: sq_fit.launch
sq_fitting_adapter/scripts/: test.py  vision_adapter_node.py
sq_fitting_adapter/src/sq_fitting_adapter/: object_fitter_lib.py  vision.py
tiago_grasping_msgs/: CMakeLists.txt  package.xml
tiago_grasping_msgs/action/: GraspItem.action
tiago_pick_demo/: CMakeLists.txt  package.xml
tiago_pick_demo/scripts/: pick_and_place_server.py  pick_client.py
