<?xml version="1.0"?>
<package format="2">
  <name>clf_grasping_msgs</name>
  <version>0.3.0</version>
  <description>Clf Grasping Messages</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>
  <author>Leroy Ruegemer</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
  
  <depend>actionlib_msgs</depend>
  <depend>moveit_task_constructor_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>