<?xml version="1.0"?>
<package format="2">
  <name>mtc_demo</name>
  <version>0.0.0</version>
  <description>Examples for Moveit Task Constructor on Tiago</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>
  <author>Leroy Ruegemer</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>srd_srvs</depend>
  <depend>tiago_grasping_msgs</depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_task_constructor_core</build_depend>
  <build_depend>rviz_marker_tools</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_task_constructor_core</exec_depend>
  <exec_depend>rviz_marker_tools</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>

  <export>
  </export>
</package>
