<?xml version="1.0"?>
<package format="2">
  <name>sq_fitting_adapter</name>
  <version>0.0.1</version>
  <description>ROS object fitter, handling interfaces to object fitting</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>
  <author>Leroy Ruegemer</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>clf_grasping_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sq_fitting_ros</depend>
  <depend>actionlib</depend>

  <export>
  </export>
</package>
